# Event-Scheduler

./: README.md  pyproject.toml
output/: conflict_resolution.md  decision_explanations.md  event_schedule.md  replanned_schedule.md  venue_allocation.md  volunteer_assignments.md
src/event_crew/: crew.py  main.py
src/event_crew/config/: agents.yaml  tasks.yaml
