[project]
name = "event_crew"
version = "0.1.0"
description = "Agentic AI-Based Event Management System using CrewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
event_crew = "event_crew.main:run"
run_crew = "event_crew.main:run"
train = "event_crew.main:train"
replay = "event_crew.main:replay"
test = "event_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
package = "event_crew"

[tool.crewai.run]
entrypoint = "event_crew.main:run"
